# collabcc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: ci_before_build.bash  ci_build.bash  ci_deploy.bash  ci_test.bash
ci/linux/: before_build.bash  build.bash  common.bashrc  test.bash
lint/pre-commit/: checkone.py  run.sh
src/: config.h.cmakein  main.cpp
src/common/: assertion.h  basic.h  common.h  macros.h
test/: test_assertions.cpp
test/driver/: assertion.h  driver.h
